--- a/support/Makefile.devel
+++ b/support/Makefile.devel
@@ -187,10 +187,28 @@ tmp/%.mod.fc: tmp/m4support.m4f %.fc
 tmp/iferror.m4:
 	@echo "ifdef(\`__if_error',\`m4exit(1)')" > $@
 
+# make invokes shell and it fails if there is too many args or too long args
+define cat_multi_arg =
+        cat -- $(wordlist    1, 1000,$(2)) > $(1)
+        if [ "$(wordlist  1001, 2000,$(2))" ]; then cat -- $(wordlist  1001, 2000,$(2)) >> $(1); \
+        if [ "$(wordlist  2001, 3000,$(2))" ]; then cat -- $(wordlist  2001, 3000,$(2)) >> $(1); \
+        if [ "$(wordlist  3001, 4000,$(2))" ]; then cat -- $(wordlist  3001, 4000,$(2)) >> $(1); \
+        if [ "$(wordlist  4001, 5000,$(2))" ]; then cat -- $(wordlist  4001, 5000,$(2)) >> $(1); \
+        if [ "$(wordlist  5001, 6000,$(2))" ]; then cat -- $(wordlist  5001, 6000,$(2)) >> $(1); \
+        if [ "$(wordlist  6001, 7000,$(2))" ]; then cat -- $(wordlist  6001, 7000,$(2)) >> $(1); \
+        if [ "$(wordlist  7001, 8000,$(2))" ]; then cat -- $(wordlist  7001, 8000,$(2)) >> $(1); \
+        if [ "$(wordlist  8001, 9000,$(2))" ]; then cat -- $(wordlist  8001, 9000,$(2)) >> $(1); \
+        if [ "$(wordlist  9001,10000,$(2))" ]; then cat -- $(wordlist  9001,10000,$(2)) >> $(1); \
+        if [ "$(wordlist 10001,11000,$(2))" ]; then echo "ERROR: too many args, extend: cat_multi_arg"; exit 1; fi; \
+	fi; fi; fi; fi; fi; fi; fi; fi; fi
+endef
+
 tmp/all_interfaces.conf: | tmp
 tmp/all_interfaces.conf: tmp/m4support.m4f $(header_interfaces) $(detected_ifs) tmp/iferror.m4
 	@echo "divert(-1)" > $@
-	$(verbose) $(M4) -R $^ | sed -e s/dollarsstar/\$$\*/g >> $@
+	$(call cat_multi_arg,$@.tmp,$(detected_ifs))
+	$(verbose) cat -- $(header_interfaces) $@.tmp tmp/iferror.m4 | $(M4) -R tmp/m4support.m4f - | sed -e s/dollarsstar/\$$\*/g >> $@
+	@rm -f -- $@.tmp
 	@echo "divert" >> $@
 
 # so users dont have to make empty .fc and .if files
