add mytest.sh to test builds with different configs

--- a/build.conf
+++ b/build.conf
@@ -18,7 +18,7 @@ TYPE = standard
 # If set, this will be used as the policy
 # name.  Otherwise the policy type will be
 # used for the name.
-NAME = refpolicy
+NAME = targeted
 
 # Distribution
 # Some distributions have portions of policy
@@ -27,7 +27,7 @@ NAME = refpolicy
 # for the distribution.
 # redhat, gentoo, debian, suse, and rhel4 are current options.
 # Fedora users should enable redhat.
-#DISTRO = redhat
+DISTRO = gentoo
 
 # Unknown Permissions Handling
 # The behavior for handling permissions defined in the
@@ -35,18 +35,18 @@ NAME = refpolicy
 # can either be allowed, denied, or the policy loading
 # can be rejected.
 # allow, deny, and reject are current options.
-UNK_PERMS = deny
+UNK_PERMS = reject
 
 # Direct admin init
 # Setting this will allow sysadm to directly
 # run init scripts, instead of requiring run_init.
 # This is a build option, as role transitions do
 # not work in conditional policy.
-DIRECT_INITRC = n
+DIRECT_INITRC = y
 
 # Systemd
 # Setting this will configure systemd as the init system.
-SYSTEMD = n
+SYSTEMD = y
 
 # Build monolithic policy.  Putting y here
 # will build a monolithic policy.
@@ -81,4 +81,4 @@ MCS_CATS = 1024
 QUIET = n
 
 # Set this to treat warnings as errors.
-WERROR = n
+WERROR = y
